# sbom

./: .dockerignore  .env.example  .env.hcl-iam.example  .gitignore  .tfignore  ADR-001-architecture-audit.md  CHANGELOG.md  CLAUDE.md  Dockerfile  PROJECT_LENS_REPORT.md  PROJECT_LENS_REPORT_2026-04-09.md  PROJECT_LENS_REPORT_COMBINED.md  README.md  SBOM_Analyser_HCLTech.pptx  SBOM_PLATFORM_CODEBASE_EXPLANATION_2026-06-22.md  Testing.md  _scratch_test_scorer.py  backend-test-final.txt  docker-compose.yml  pyproject.toml  pytest.ini  requirements.before-upgrade.txt  requirements.txt  run.py  sbom-corrected.cdx.json  sbom.json  sbom.spdx.json  sbom_results.json
.claude/: settings.json  settings.local.json
KEV/: .env.example  README.md  config.py  database.py  kev_service.py  main.py  requirements.txt  schemas.py
SBOM_Analyzer_SSD_Document_Package/: README.txt  SBOM_Analyzer_SSD_API_Inventory.docx  SBOM_Analyzer_SSD_Configuration_Reference.docx  SBOM_Analyzer_SSD_Data_Dictionary.docx  SBOM_Analyzer_SSD_Document_Register.docx  SBOM_Analyzer_SSD_Implementation_Traceability.docx  SBOM_Analyzer_SSD_Master.docx  SBOM_Analyzer_SSD_Open_Questions.docx  SBOM_Analyzer_SSD_Test_Traceability.docx
alembic/: env.py
app/: __init__.py  analysis.py  auth.py  credentials.py  db.py  deprecation.py  error_handlers.py  etag.py  http_client.py  idempotency.py  logger.py  main.py  main.py.bak  models.py  models_mixins.py  pdf_report.py  rate_limit.py  sbom_api.db  schemas.py  schemas_compare.py  schemas_cve.py  schemas_dashboard.py  schemas_lifecycle_admin.py  settings.py  utils.py
audit/: 00_inventory.md  01_oop.md  02_solid.md  03_dry.md  04_kiss.md  05_yagni.md  06_supporting_principles.md  07_backend.md  08_frontend.md  09_cross_cutting.md  10_refactor_plan.md  r2_implementation_diff.md  r2_merge_report.md  r3_max_upload_report.md  r3_upload_size_discovery.md  r4_500_envelope_report.md  r4_leak_sites.md  r5_deletion_manifest.md  r5_purge_report.md  r6_orchestrator_collapse_report.md  r6_orchestrator_recon.md  sbom-analyzer-validation-prompt.md
docs/: HCL_IAM_CONFIGURATION.md  LIFECYCLE_EOL_EOS_STATUS_REPORT.md  WINDOWS_NATIVE_SETUP.md  ai-fixes-api-paths.md  ai-providers.md  ai-ui-audit.md  baseline-stabilization-2026-07-22.md  cache-invalidation-audit.md  compare-discovery.md  compare-flow-audit.md  compare-ui-audit.md  compare-ui-redesign.md  component-deduplication.md  component-lifecycle-sources.md  cost-projection-ai-config.md  cve-modal-discovery.md  dashboard-audit.md  dashboard-metrics-audit.md  dashboard-metrics-spec.md  dashboard-redesign.md  dashboard-v2-audit.md  dashboard-v4-advanced.md  kev_testing_checklist.md  lifecycle-enrichment.md  metric-conventions.md  metric-correctness-audit.md  notification-coverage.md  refactor-endpoint-inventory-2026-07-22.md  risk-index.md  rollout-ai-fixes.md  rollout-sbom-validation.md  runbook-ai-credentials.md  runbook-ai-fixes.md  runbook-compare.md  runbook-cve-detail-modal.md  runbook-metric-debugging.md  runbook-sbom-validation.md  sbom-validation-repair-workspace.md  sbom-validation.md  scope-aware-ai-fixes-audit.md  (+7 more)
frontend/: .env.local.example  .gitignore  eslint.config.mjs  next.config.mjs  node_modules  package-lock.before-upgrade.json  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
qa/: dashboard-checklist.md
samples/: ControlSW-0.1.0.cdx 1.json  Control_SBOM_SPDX_003_EOS_EOL_ADDED.json  Monitor-0.1.0.cdx 1.json  RI.HIP_v1-novex.spdx (1) (2).json  app-sbom.cdx.json  cyclonedx-multi-ecosystem.json  inputsbom.json  sample_02_spdx_container_clean.spdx.json  sample_03_cdx_ohif_viewer_clean.cdx.json  sample_04_spdx_orthanc_clean.spdx.json  sample_05_cdx_mirth_connect_clean.cdx.json  spdx-web-app.json
sbom_test_samples_10_files/: 01_cyclonedx_lifecycle_runtimes.cdx.json  02_cyclonedx_registry_deprecated_old_packages.cdx.json  03_cyclonedx_duplicate_components.cdx.json  04_cyclonedx_missing_metadata_completeness.cdx.json  05_cyclonedx_invalid_repair_workspace.cdx.json  06_cyclonedx_vulnerable_components_osv.cdx.json  07_cyclonedx_with_vex_analysis.cdx.json  08_spdx_valid_lifecycle.spdx.json  09_spdx_invalid_dangling_relationship.spdx.json  10_cyclonedx_mixed_enterprise_app.cdx.json  README.md
sbom_valid_10_samples/: 01_cyclonedx_valid_lifecycle_runtimes.cdx.json  02_cyclonedx_valid_registry_deprecated_candidates.cdx.json  03_cyclonedx_valid_duplicate_components_for_dedupe.cdx.json  04_cyclonedx_valid_completeness_metadata.cdx.json  05_cyclonedx_valid_edit_version_management.cdx.json  06_cyclonedx_valid_vulnerable_components_osv.cdx.json  07_cyclonedx_valid_with_vex_analysis.cdx.json  08_cyclonedx_valid_remediation_tracking.cdx.json  09_cyclonedx_valid_mixed_enterprise_portfolio.cdx.json  (+2 more)
(+1136 files in other folders)
