[build-system]
requires = ["setuptools>=83", "wheel>=0.47"]
build-backend = "setuptools.build_meta"

[project]
name = "sbom-analyzer"
version = "2.0.0"
description = "SBOM Analyzer API — modular monolith (FastAPI, Celery, PostgreSQL)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.50.1",
    "sqlalchemy>=2.0.51",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "psycopg[binary]>=3.3.4",
    "alembic>=1.18.5",
    "requests>=2.34.2",
    "httpx>=0.28.1",
    "certifi>=2026.6.17",
    "reportlab>=5.0.0",
    "openpyxl>=3.1,<4",
    "packaging>=26.2",
    "python-multipart>=0.0.32",
    "python-dotenv>=1.2.2",
    "slowapi>=0.1.10",
    "celery[redis]>=5.6.3",
    "redis>=4.5.2,<6.5",
    "PyJWT>=2.13.0",
    "boto3>=1.43.40",
    "cryptography>=49.0.0",
    "tenacity>=9.1.4",
    # SBOM validation pipeline (ADR-0007) — eight-stage layered validator.
    "jsonschema>=4.26,<5",
    "lxml>=6,<7",
    "defusedxml>=0.7,<1",
    "ruamel.yaml>=0.19,<1",
    "packageurl-python>=0.17,<2",
    "license-expression>=30.4,<32",
    "spdx-tools>=0.8.5,<1",
    "cyclonedx-python-lib>=11.11,<12",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-benchmark>=5.2.3",
    "hypothesis>=6.156.1",
    "httpx2>=2.5.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "import-linter>=2.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["app", "tests"]
exclude = ["alembic"]

[tool.setuptools.package-data]
app = ["templates/reports/*.xlsx"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",
    "B008",
    "E402",
    "B904",
    "E711",
    "F841",
    "UP042",
]

[tool.ruff.lint.per-file-ignores]
"app/parsing/xml_support.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
explicit_package_bases = true

[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "Parsing does not depend on HTTP or routers"
type = "forbidden"
source_modules = [
    "app.parsing",
]
forbidden_modules = [
    "app.routers",
    "app.main",
]

# ADR-0007: validation must be side-effect-free. Stages talk to settings
# only, never to routers / services / DB / models. Schemas are vendored,
# never fetched at runtime.
[[tool.importlinter.contracts]]
name = "Validation never imports HTTP, services, models, or DB"
type = "forbidden"
source_modules = [
    "app.validation",
]
forbidden_modules = [
    "app.routers",
    "app.main",
    "app.services",
    "app.db",
    "app.models",
]

[[tool.importlinter.contracts]]
name = "Validation never makes runtime HTTP requests"
type = "forbidden"
source_modules = [
    "app.validation",
]
forbidden_modules = [
    "requests",
    "httpx",
    "urllib.request",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
